--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "global-jsdom": "^8.5.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react_ujs": "^2.6.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
-    "react_ujs": "^2.6.2",
+    "react-router-hash-link": "^2.4.3",
     "reactstrap": "^9.1.4",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
