--- a/config/storage.yml
+++ b/config/storage.yml
@@ -4,15 +4,15 @@ test:
 
 local:
   service: S3
-  access_key_id: ENV["AWS_KEY_ID"]
-  secret_access_key: ENV["AWS_SECRET_KEY"]
+  access_key_id: <%= ENV["AWS_KEY_ID"] %>
+  secret_access_key: <%= ENV["AWS_SECRET_KEY"] %>
   bucket: "medium-rankup-bucket-dev"
   region: "us-west-1"
 
 amazon:
   service: S3
-  access_key_id: ENV["AWS_KEY_ID"]
-  secret_access_key: ENV["AWS_SECRET_KEY"]
+  access_key_id: <%= ENV["AWS_KEY_ID"] %>
+  secret_access_key: <%= ENV["AWS_SECRET_KEY"] %>
   bucket: "medium-rankup-bucket-pro"
   region: "us-west-1" # e.g. 'us-east-1'
 
